--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "fs": "0.0.1-security",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.487.0",
@@ -55,13 +56,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/formidable": "^3.4.5",
     "@types/leaflet": "^1.9.17",
     "@types/leaflet.markercluster": "^1.5.5",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^20.17.30",
+    "@types/react": "^19.1.0",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "formidable": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
