--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,10 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "^3.31.0",
+    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query-devtools": "^5.74.6",
     "@tanstack/react-table": "^8.21.2",
+    "@types/react-select": "^5.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -45,7 +48,9 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.2",
+    "root": "git+https://github.com/tanstack/react-query.git",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
