--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "font": "link:@vercel/turbopack-next/internal/font/google/font",
     "form": "link:@/components/ui/form",
     "fs": "0.0.1-security",
     "leaflet": "^1.9.4",
@@ -55,15 +56,13 @@
     "react-leaflet": "^5.0.0",
     "react-select": "^5.10.1",
     "recharts": "^2.15.2",
-    "register-form": "link:@/components/auth/register-form",
     "root": "git+https://github.com/tanstack/react-query.git",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "theme-provider": "^1.0.8",
     "tw-animate-css": "^1.2.5",
-    "vaul": "^1.1.2",
-    "zod": "link:@hookform/resolvers/zod"
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
